--- a/index.html
+++ b/index.html
@@ -28,25 +28,80 @@
     </header>
 
     <main>
-        <section class="hero">
+        <section id="home" class="hero">
             <div class="background">
             </div>
+            <div class="wrapper">
                 <div class="left">
                     <img src="">
+                    <h1>Foto</h1>
                 </div>
-                <div class="right rellax">
+                <div class="right">
                     <h1>Gatuno Produções</h1>
-                    <p>Eventos</p>
-                    <p>Produções</p>
-                    <p>Shows</p>
+                    <p class="animate__animated animate__fadeInLeft animate__faster">Eventos</p>
+                    <p class="animate__animated animate__fadeInLeft animate__fast">Produções</p>
+                    <p class="animate__animated animate__fadeInLeft">Shows</p>
                 </div>
+            </div>
+        </section>
+
+        <section id="sobre-nos">
+            <div class="sobre">
+                <div class="wrapper">
+                    <div class="left">
+                        <h1>Foto</h1>
+                    </div>
+                    <div class="right">
+                        <h1>Bio</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="artistas">
+            <div class="artistas">
+                <div class="cards">
+                    <div class="card">
+                        <img src="">
+                        <div class="descricao">
+                            <p class="nome">Marcílio Rodrigues</p>
+                            <button class="conheca">Conheça</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="">
+                        <div class="descricao">
+                            <p class="nome">Italo Sena</p>
+                            <button class="conheca">Conheça</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="">
+                        <div class="descricao">
+                            <p class="nome">Carlos Santos</p>
+                            <button class="conheca">Conheça</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="">
+                        <div class="descricao">
+                            <p class="nome">Italo Lima</p>
+                            <button class="conheca">Conheça</button>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="">
+                        <div class="descricao">
+                            <p class="nome">Tibério</p>
+                            <button class="conheca">Conheça</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha512-f5HTYZYTDZelxS7LEQYv8ppMHTZ6JJWglzeQmr0CVTS70vJgaJiIO15ALqI7bhsracojbXkezUIL+35UXwwGrQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        let rellax = new Rellax('.rellax')
-    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </body>
 </html>
